# Linky

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md  Rocket.example.toml
migrations/2020-08-26-093528_create_links/: down.sql  up.sql
server/: .env  Cargo.toml  README.md  Rocket.example.toml
server/migrations/2020-08-26-093528_create_links/: down.sql  up.sql
server/src/: connection.rs  main.rs  redirect.rs  schema.rs
server/src/api/: handler.rs  mod.rs
src/: App.jsx  connection.rs  main.rs  models.rs
src/api/: handler.rs
static/: index.html
