[package]
name = "linky_server"
version = "0.1.0"
authors = ["Matthew <emailr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.4.5", features = ["private-cookies"]}
dotenv = "0.15.0"
r2d2 = "0.8.9"
serde = "1.0.115"
serde_derive = "1.0.115"
serde_json = "1.0.57"
tokio-postgres = "0.5.5"
tokio = {version="0.2.22", features = ["macros"]}

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "serve", "databases", "postgres"]
