[package]
name = "linky_server"
version = "0.1.0"
authors = ["Matthew"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"]}
diesel = { version = "1.4", features = ["postgres"]}
rand = "0.7.3"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "diesel_postgres_pool", "handlebars_templates", "tera_templates"]
